<resources>
    <string name="app_name">Photo translator</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="content_description_google_translate_attribution">Google Translate attribution</string>
    <string name="overlay_help">Center text in box</string>
    <string name="downloading_model_files">Downloading model files…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">photo</string>
    <string name="pick_language">Choose language</string>
    <string name="translate_to">Translate to</string>
    <string name="crop_image">Crop image</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="communication">Communication</string>
    <string name="rate_app">Rate app</string>
    <string name="terms_of_use_amp_privacy_police"><![CDATA[Terms of Use & Privacy Police]]></string>
    <string name="version_1_5_1_0">Version 1.5.1.0</string>
    <string name="translate_text">Translate text</string>
    <string name="record">Record</string>
    <string name="capture">Capture</string>
    <string name="document">Document</string>
    <string name="import_title">Import</string>
    <string name="recent">Recent</string>
    <string name="select_all">Select all</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="market_url">https://cat-bounce.com</string>
    <string name="terms_link">https://google.com</string>
    <string name="translate">Translate</string>
</resources>