<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"></group>

    <group android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:checked="true"/>

        <item android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history"/>

    </group>

    <item android:title="@string/communication">
        <menu>

            <group>

                <item android:id="@+id/rate"
                    android:title="@string/rate_app"
                    android:icon="@drawable/ic_rate" />

                <item android:id="@+id/terms"
                    android:title="@string/terms_of_use_amp_privacy_police"
                    android:icon="@drawable/ic_privacy"/>

            </group>
        </menu>
    </item>

</menu>