<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="inDelete"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECF1FF"
        tools:context=".ui.main.HistoryFragment">

        <include
            android:id="@+id/app_bar_history"
            layout="@layout/app_bar_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bot"
            app:layout_constraintTop_toBottomOf="@id/app_bar_history"
            tools:listitem="@layout/list_item_photo" />

        <LinearLayout
            android:id="@+id/bot"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#fff"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:visibility="@{inDelete ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/ic_select_all" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pop_reg"
                    android:text="@string/select_all"
                    android:textAlignment="center"
                    android:textColor="@color/main_text_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/icon_delete" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pop_reg"
                    android:text="@string/delete"
                    android:textAlignment="center"
                    android:textColor="#FFFF6868" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/ic_cancel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pop_reg"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textColor="@color/main_text_color" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>