<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_main">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/translate_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/text_preview"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_text"
                        app:layout_constraintBottom_toTopOf="@id/text_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pop_bold"
                        android:text="@string/translate_text"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/record"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/record_preview"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_record"
                        app:layout_constraintBottom_toTopOf="@id/record_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/record_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pop_bold"
                        android:text="@string/record"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/record_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/capture"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/capture_preview"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_cature"
                        app:layout_constraintBottom_toTopOf="@id/carpture_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/carpture_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pop_bold"
                        android:text="@string/capture"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/capture_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/document"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/document_preview"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_document"
                        app:layout_constraintBottom_toTopOf="@id/document_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/document_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pop_bold"
                        android:text="@string/document"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/document_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/import_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/import_preview"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:src="@drawable/ic_import"
                        app:layout_constraintBottom_toTopOf="@id/import_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/import_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pop_bold"
                        android:text="@string/import_title"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/import_preview" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
